<resources>

<!--    Menu-->
    <string name="saludapp">SaludApp</string>
    <string name="imc_app">IMC APP</string>
    <string name="to_do_app">TO DO APP</string>
    <string name="superhero_app">SuperHero App</string>
    <string name="settings">Settings</string>

<!--    IMC APP-->
    <string name="app_name">AndroidMaster</string>
    <string name="men">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Recalcular</string>

    <string name="error">Error</string>

    <string name="title_underweight">Bajo Peso</string>
    <string name="description_underweight">Estás por debajo de lo ideal para tu peso y altura</string>

    <string name="title_normal">Peso Normal</string>
    <string name="description_normal">Estás en tu peso óptimo</string>

    <string name="title_overweight">Sobrepeso</string>
    <string name="description_overweight">Estás por encima de lo ideal para tu peso y altura</string>

    <string name="title_obesity">Obesidad</string>
    <string name="description_obesity">Estás muy por encima de lo ideal para tu peso y altura</string>

    <!--    TO DO APP-->
    <string name="todo_title">Bienvenidas</string>
    <string name="todo_categories">Categoría</string>
    <string name="todo_tasks">Tareas</string>

    <string name="todo_dialog_add_task">Agregar Tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_other">Otros</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_add_task_button">Crear Tarea</string>
    <string name="androidMaster">Android Master</string>
    <string name="Intelligence">Inteligencia</string>
    <string name="strength">Fuerza</string>
    <string name="speed">Velocidad</string>
    <string name="durability">Durabilidad</string>
    <string name="power">Poder</string>
    <string name="combat">Combate</string>
    <string name="dark_mode">Modo Oscuro</string>
    <string name="dark_mode_subtitle">Activa el modo oscuro para un cambio visual</string>
    <string name="bluetooth_title">Activar Bluetooth</string>
    <string name="bluetooth_subtitle">Conecta periféricos sin cables</string>
    <string name="volume_title">Manejar volumen</string>
    <string name="vibration_title">Modo vibración</string>


</resources>