<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnSaludApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saludapp" />

    <Button
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_app" />

  <Button
        android:id="@+id/btnTODOApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_do_app" />

  <Button
        android:id="@+id/btnSuperHeroApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/superhero_app" />

 <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

</LinearLayout>